--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-IN" dir="ltr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset=”UTF-8″>
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+<meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
+<title>Arvind Motors Kengeri | Tata Motors Commercial Vehicle Dealer</title>
 </head>
   
 <body>
