--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
     <div class="footer-single-row footer-bg-logo">
         <div class="footer-sec1 font-variant-caps">
             <div class="footer-pad-inherit">
-                <p>Tata Arvind Motors Pvt Ltd Mysore Road Kengeri</p>
+                <h4>Tata Motors Commercial Vehicle Dealer - Arvind Motors Pvt Ltd</h4>
                 <h3>Arvind Motors Pvt Ltd, Kengeri</h3>
                 <h4>#2091, Oppsite to Vijaya Bank, Outer Ring Road, <br>Old Outer Ring Road, Kengeri Satellite Town <br>Bengaluru, Karnataka 560060</h4>
                 <hr>
