--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             .marquee__inner_logo {width: 186px; height: 15px;}
             .marquee span { font-size: 6vw; padding: 0 2vw; color: black; }
             .marquee-img {top: 4px}
-            .marquee {top: 26px; }
+            .marquee {height: 30px; }
             .flex-block {display: block}
             .counter-flex li {margin: inherit; margin-inline-start: -23px;;}
             /*Footer */
