--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
     <title>Arvind Motors Pvt Ltd Kengeri | Tata Truck Dealers | Tata Motors</title>
     <meta name="description" content="Arvind Motors Pvt Ltd Kengeri is the Authorised Dealer Showroom for Tata Commercial Vehicles. For Enquire Call: 09972800125 | Tata Arvind Motors Bangalore.">
-    <link rel="canonical" href="https://www.tatamb.com/" />
+    <link rel="canonical" href="https://tatamb.com/" />
 
     
     <!--OG TAG-->
     <meta property="og:title" content="Arvind Motors Pvt Ltd Kengeri | Tata Motors | Tata Truck Dealers"/>
-    <meta property="og:url" content="https://www.tatamb.com/" />
+    <meta property="og:url" content="https://tatamb.com/" />
     <meta property="og:description" content="Arvind Motors Pvt Ltd Kengeri is the Authorised Dealer Showroom for Tata Commercial Vehicles. For Enquire Call Tata Arvind Motors Bangalore. Ph:09972800125"/>
-    <meta property="og:image" content="https://www.tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg"/>
+    <meta property="og:image" content="https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg"/>
     <meta property="og:image:width" content="750" />
     <meta property="og:image:height" content="460" />
 
@@ -50,12 +50,12 @@
     {
       "@context": "https://schema.org",
       "@type": "AutoDealer",
-      "url": "https://www.tatamb.com/",
-      "@id": "https://www.tatamb.com/index.html#AutoDealer",
+      "url": "https://tatamb.com/",
+      "@id": "https://tatamb.com/index.html#AutoDealer",
       "name": "Arvind Motors Pvt Ltd Kengeri | Tata Truck Dealers",
-      "logo": "https://www.tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
-      "image": "https://www.tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
-      "sameAs": "https://www.tatamb.com",
+      "logo": "https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
+      "image": "https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
+      "sameAs": "https://tatamb.com",
       "priceRange": "₹ 441,448.00 - ₹ 888,850.00 (Tata Commercial Mini Truck Price Range)",
       "address": {
         "@type": "PostalAddress",
@@ -110,8 +110,8 @@
         {
           "@context": "https://schema.org",
           "@type": "Organization",
-          "url": "https://www.tatamb.com/",
-      	  "logo": "https://www.tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
+          "url": "https://tatamb.com/",
+      	  "logo": "https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
           "contactPoint": [{
             "@type": "ContactPoint",
             "telephone": "+919972800125",
