--- a/index.html
+++ b/index.html
@@ -625,6 +625,19 @@
                 </div>
             </div>
         </div>
+        <div class="blog-card-single-row">
+            <div class="blog-sec-single-row">
+                <div class="blog-card-text">
+                    <amp-img src="img/products/tata-yodha-2.0.png" alt="New Tata Yodha Pickup 2.0" title="Tata Yodha Pickup 2.0" width="587" height="341" layout="responsive" class="img-bg-white"></amp-img><hr>
+                    <h3 class="blog-desc">Tata Yodha Pickup 2000 - 2.0</h3>
+                    <p class="blog-desc">Powered by the most powerful and fuel-efficient engine in the category, and the biggest cargo loading area, the Tata Yodha is one of the sturdiest and most stylish pickup range on Indian roads.</p>
+                    <p class="blog-desc">Price Range: <br>₹999,921.00 - ₹108,850.00</p>
+                    <!-- CTA Button-->
+                    <a class="ampstart-btn" href="tel:+919972800125">Enquire Now</a>
+                    <!-- CTA Button-->
+                </div>
+            </div>
+        </div>
     </amp-carousel>
 <!--    <p class="price-declare">*The above prices are indicative, Price ruling at the time of delivery will be applicable.</p>-->
 </section>
