--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         /*.pad-top-sec { padding-top: 86px;}*/
 
         /*site name*/
-        .h1-site-name {font-size: 5vw; margin: 5px; color: #0a1660; padding-top: 8%; text-shadow: 0px 0px 20px white; text-decoration-line: underline;}
+        .h1-site-name {font-size: 5vw; margin: 5px; background: #ffffff3d; color: #0a1660; padding-top: 8%; text-shadow: 0px 0px 20px white; text-decoration-line: underline;}
         /*site name*/
 
         /*Section 1*/
@@ -549,7 +549,8 @@
 </section>
 <!--Carousel Slide-->
 
-<h1 class="cent-text h1-site-name" >Arvind Motors Pvt Ltd, Kengeri</h1>
+<!-- <h1 class="cent-text h1-site-name" >Arvind Motors Pvt Ltd, Kengeri</h1> -->
+<h1 class="cent-text h1-site-name" >Tata Motors Commercial Vehicle Dealer <br> Arvind Motors Pvt Ltd - Kengeri</h1>
 
 <!--Carousel Products-->
 <section class="sec-1-bg">
