--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--<script async defer crossorigin="anonymous" custom-element="amp-facebook-page"  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="dgzV6Vjq"></script>-->
 <script async custom-element="amp-facebook-page" src="https://cdn.ampproject.org/v0/amp-facebook-page-0.1.js"></script>
 
-    <title>Arvind Motors Pvt Ltd Kengeri | Tata Truck Dealers | Tata Motors</title>
+    <title>Tata Motors Commercial Vehicle Dealer - Arvind Motors Pvt Ltd</title>
     <meta name="description" content="Arvind Motors Pvt Ltd Kengeri is the Authorised Dealer Showroom for Tata Commercial Vehicles. For Enquire Call: 09972800125 | Tata Arvind Motors Bangalore.">
     <link rel="canonical" href="https://tatamb.com/" />
 
@@ -52,14 +52,14 @@
       "@type": "AutoDealer",
       "url": "https://tatamb.com/",
       "@id": "https://tatamb.com/index.html#AutoDealer",
-      "name": "Arvind Motors Pvt Ltd Kengeri | Tata Truck Dealers",
+      "name": "Tata Motors Commercial Vehicle Dealer - Arvind Motors Pvt Ltd",
       "logo": "https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
       "image": "https://tatamb.com/img/og-tag/arvind-moters-pvt-ltd-kengeri-bangalore.jpg",
       "sameAs": "https://tatamb.com",
-      "priceRange": "₹ 441,448.00 - ₹ 888,850.00 (Tata Commercial Mini Truck Price Range)",
+      "priceRange": "₹ 440,448.00 - ₹ 888,850.00 (Tata Commercial Mini Truck Price Range)",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "#2091, Oppsite to Vijaya Bank, Outer Ring Road, Old Outer Ring Road",
+        "streetAddress": "Satellite Town, Kengeri, No 2091, 80 Feet Ring Rd, Opposite Vijaya Bank, Kengeri",
         "addressLocality": "Kengeri Satellite Town, Bengaluru",
         "addressRegion": "Karnataka",
         "postalCode": "560060",
@@ -670,7 +670,7 @@
             <div class="footer-pad-inherit">
                 <h4>Tata Motors Commercial Vehicle Dealer - Arvind Motors Pvt Ltd</h4>
                 <h3>Arvind Motors Pvt Ltd, Kengeri</h3>
-                <h4>#2091, Oppsite to Vijaya Bank, Outer Ring Road, <br>Old Outer Ring Road, Kengeri Satellite Town <br>Bengaluru, Karnataka 560060</h4>
+                <h4>#2091, Satellite Town, Kengeri, No 2091,<br>80 Feet Ring Rd, Opposite Vijaya Bank,<br>Kengeri, Bengaluru, Karnataka 560060</h4>
                 <hr>
 <!--                <h4>Bangalore Booking Office: <br>#50, 2nd Cross, P&T Colony,<br> R.T Nagar, Bangalore - 560031</h4>-->
             </div>
@@ -734,7 +734,7 @@
 <!--Copyrights-->
 <section class="footer-bg-grad cent-text">
     <div class="font-variant-caps">
-        <h6>© All rights reserved | 2023 | Arvind Motors Pvt Ltd | Kengeri Branch, Bangalore</h6>
+        <h6>© All rights reserved | 2024 | Tata Motors Commercial Vehicle Dealer Arvind Motors Pvt Ltd | Kengeri Branch, Bangalore</h6>
     </div>
 </section>
 <!--Copyrights--><!--Copyrights-->
